# portfolio

./: .gitignore  Procfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
core/: celery.py  settings.py  urls.py
portfolio/: admin.py  models.py  tasks.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_project_personal_rating.py  0003_project_category.py  0004_experience.py
static/js/: main.js
static/src/: input.css  output.css
staticfiles/CACHE/: manifest.json
staticfiles/CACHE/css/: output.3bc80aff4b56.css  output.482a42e4ccdf.css  output.4d1b56638cca.css  output.73ea9b113461.css
staticfiles/CACHE/js/: output.03b294ca820e.js  output.ef235471c3fa.js
templates/: base.html  contact.html  index.html  projects.html  sobre.html
templates/partials/: _footer.html  _navbar.html  _projects.html
