[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.70",
    "celery>=5.6.2",
    "cloudinary>=1.44.1",
    "django>=6.0.3",
    "django-compressor>=4.6.0",
    "django-storages>=1.14.6",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]
